# s3-benchmarker

./: .gitignore  LICENSE  Makefile  README.md  config.toml.example  main.py  pyproject.toml
benchmark/: __init__.py  cli.py  comparison.py  config.py  database.py  utils.py
benchmark/benchmarks/: __init__.py  base.py  read_benchmark.py  write_benchmark.py
benchmark/storage/: __init__.py  base.py  local.py  s3.py
