[project]
name = "s3-benchmarker"
version = "1.0.0"
description = "Benchmark tool for S3-compatible storage providers"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    {name = "S3 Benchmarker", email = "benchmark@example.com"}
]
license = {text = "MIT"}
keywords = ["benchmark", "storage", "s3", "performance", "comparison"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "requests>=2.31.0",
    "requests-aws4auth>=1.2.3",
    "tomli>=2.0.0; python_version < '3.11'",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[project.scripts]
s3-benchmarker = "benchmark.cli:main"
s3-benchmark = "benchmark.cli:main"

[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["benchmark*"]

[tool.black]
line-length = 100
target-version = ['py310', 'py311', 'py312']

[tool.ruff]
line-length = 100
target-version = "py310"
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]
